fix search input on firefox

--- a/app/components/SearchInput/styles.scss
+++ b/app/components/SearchInput/styles.scss
@@ -6,21 +6,19 @@ flex-direction: row;
 .input-search{
 --input-search--Color: var(--global--font--Color);
 color: var(--input-search--Color, #666);
-height: 45px;
+height: 43px;
 font-size: 16px;
 padding:0 20px;
 outline:0;
 border: 1px solid #c8c8c8;
-max-width: 300px;
-width:100%;
+width: 210px;
 }
 
 .btn--search{
 --btn-search--Color: var(--global--font--Color);
 color: var(--btn-search--Color, #666);
-height: 45px;
-max-width: 55px;
-width:100%;
+height: 43px;
+width: 55px;
 border: none;
 background: #F0F0F0;
 border: 1px solid #c8c8c8;
@@ -28,4 +26,9 @@ outline: 0;
 border-left: 0;
 cursor: pointer;
 font-size: 16px;
+}
+
+::placeholder{
+--placeholder--Color: var(--global--font--Color);
+color: var(--placeholder--Color, #666);
 }
